--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,4 +9,7 @@
       <a href="/delete-post/{{ id }}">Delete</a>
     </div>
   {{/each}}
+  <script src="/js/newPost.js"></script>
+<script src="/js/deletePost.js"></script>
+
 </div>
