--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,6 +5,10 @@
     <input class="form-input" type="text" id="username-signup" name="username" required/>
   </div>
   <div class="form-group">
+    <label for="email-signup">Email:</label>
+    <input class="form-input" type="email" id="email-signup" name="email" required/>
+  </div>
+  <div class="form-group">
     <label for="password-signup">Password:</label>
     <input class="form-input" type="password" id="password-signup" name="password" required/>
   </div>
