--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,19 +1,23 @@
-<div class="container">
-  <h1>{{ post.title }}</h1>
-  <p>{{ post.content }}</p>
-  <p>Posted by {{ post.username }} on {{ post.createdAt }}</p>
-  
-  <h2>Comments</h2>
+<!-- Post content -->
+<div class="post">
+  <h2>{{post.title}}</h2>
+  <p>{{post.content}}</p>
+  <button class="delete-post-btn" data-post-id="{{post.id}}">Delete Post</button>
+</div>
+
+<!-- Comments section -->
+<section class="comments">
+  <h3>Comments:</h3>
   {{#each comments}}
-    <div class="comment">
-      <p>{{ content }}</p>
-      <p>Posted by {{ username }} on {{ createdAt }}</p>
-    </div>
+  <div class="comment">
+    <p>{{this.text}}</p>
+  </div>
   {{/each}}
-  
-  <form id="comment-form">
-    <label for="comment-content">Add a comment:</label>
-    <textarea id="comment-content"></textarea>
+
+  <!-- Add comment form -->
+  <form id="add-comment-form" data-post-id="{{post.id}}">
+    <textarea id="comment-text" placeholder="Add a comment..."></textarea>
     <button type="submit">Submit</button>
   </form>
-</div>
+  <script src="/js/addComment.js"></script>
+</section>
